2010-03-25  Tiger Soldier  <tigersoldi@gmail.com>

	* configure.ac: New release version

2010-03-24  Tiger Soldier  <tigersoldi@gmail.com>

	* data/dialogs.glade: FIX: The handler of advance/delay lrc offset in pop menu is fixed

	* src/ol_lrc.c: ADD: Rewirte of LRC file module

	* src/ol_lrc_parser.c: ADD: Charset detection and convertion of LRC Parser

	* src/tests/ol_lrc_parser_test.c: ADD: Basic test for LRC Parser

	* src/ol_lrc_parser.c: ADD: A new lexical parser of LRC files

2010-03-23  Tiger Soldier  <tigersoldi@gmail.com>

	* ADD: Charset detector library from pcmanx

2010-03-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c: FIX: The bug that OSD Window never hides when is set to hidden is fixed

	* src/ol_utils.c (ol_path_is_file): CHANGE: Comment out the annoying ol_path_is_file log

	* src/ol_trayicon.c (activate): ADD: Show/Hide Lyrics when click the tray icon

2010-03-16  Tiger Soldier  <tigersoldi@gmail.com>

	* ADD: Display player icons in notification and tray icon
	* ADD: Path of icons for Audacious, Amarok 2, Banshee, Exaile 0.3, MPD, Quod Libet, Rhythmbox, Songbird, XMMS2

	* src/ol_utils.c: CHANGE: Move ol_path_is_file from ol_path_pattern.[ch] to ol_utils.[ch]

	* src/ol_player.h: CHANGE: Change the type OlPlayerController to struct OlPlayer to reduce dependency of ol_player.h
	* src/ol_osd_window.c (ol_osd_window_unrealize): FIX: Memory leak due to the event_window of OSD Window is not unrefed on destroy
	FIX: realize osd_window with proper size
	FIX: alignments of OSD Window will be calculated properly when the window is moved

	* src/ol_osd_module.c (ol_osd_module_init_osd): FIX: We don't have to g_object_ref_sink to OSD Window any longer

2010-03-15  Tiger Soldier  <tigersoldi@gmail.com>

	* configure.ac: CHANGE: Do not stop autoconf if xmms2 or mpd library is missing

2010-03-14  Tiger Soldier  <tigersoldi@gmail.com>
